RESOLVED FIXED173479
WebRTC sockets should be closed at destruction time if not closed explicitly
https://bugs.webkit.org/show_bug.cgi?id=173479
Summary WebRTC sockets should be closed at destruction time if not closed explicitly
youenn fablet
Reported 2017-06-16 10:43:37 PDT
Otherwise, we will keep opened sockets for the lifetime of the web process.
Attachments
Patch (20.32 KB, patch)
2017-06-16 10:45 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-06-16 10:45:12 PDT
youenn fablet
Comment 2 2017-06-16 10:46:00 PDT
This may explain some of the flaky WebRTC test timeouts we see on bots
youenn fablet
Comment 3 2017-06-16 13:15:52 PDT
WebKit Commit Bot
Comment 4 2017-06-16 17:29:42 PDT
Comment on attachment 313090 [details] Patch Clearing flags on attachment: 313090 Committed r218432: <http://trac.webkit.org/changeset/218432>
WebKit Commit Bot
Comment 5 2017-06-16 17:29:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.