WebRTC sockets should be closed at destruction time if not closed explicitly https://bugs.webkit.org/show_bug.cgi?id=173479

Patch by Youenn Fablet <youenn@apple.com> on 2017-06-16
Reviewed by Eric Carlson.

Source/WebKit2:

* WebProcess/Network/webrtc/LibWebRTCSocket.cpp:
(WebKit::LibWebRTCSocket::~LibWebRTCSocket):
(WebKit::LibWebRTCSocket::Close):

LayoutTests:

* webrtc/datachannel/multiple-connections-expected.txt: Added.
* webrtc/datachannel/multiple-connections.html: Added.

Canonical link: https://commits.webkit.org/190383@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218432 268f45cc-cd09-0410-ab3c-d52691b4dbfc